[package]
name = "sts32-33-dis"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.8.0"
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.3", features = ["device"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
